[gd_scene load_steps=10 format=3 uid="uid://dspg8wis6lx02"]

[ext_resource type="Script" path="res://scenes/game_objects/player/player.gd" id="1_gn0gy"]
[ext_resource type="Texture2D" uid="uid://cxy8jln7lrrja" path="res://assets/player/player.png" id="1_lpnhd"]
[ext_resource type="PackedScene" uid="uid://c10pcn4go5q0r" path="res://scenes/components/health_component.tscn" id="2_tsamj"]
[ext_resource type="PackedScene" uid="uid://15kyseltb1g4" path="res://scenes/abilities/sword_ability/sword_ability_controller.tscn" id="2_umdup"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6odnc"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fcn1l"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_i26rh"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_g4amw"]
radius = 7.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1kuck"]
radius = 5.0
height = 12.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_gn0gy")

[node name="HealthComponent" parent="." instance=ExtResource("2_tsamj")]

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_umdup")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -23.0
offset_right = 16.0
offset_bottom = -17.0
pivot_offset = Vector2(16, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_6odnc")
theme_override_styles/fill = SubResource("StyleBoxFlat_fcn1l")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_i26rh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_lpnhd")
offset = Vector2(0, -8)

[node name="DamageArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_g4amw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_1kuck")
